# sodexobot

./: .gitignore  Cargo.toml  Makefile  flake.nix
.github/workflows/: update-nixdots.yaml
src/: error.rs  event.rs  main.rs  schedule.rs
src/commands/: list.rs  mod.rs  schedule.rs
src/list/: extra_info.rs  mod.rs
src/lista/: extra_info.rs  mod.rs  structs.rs
src/types/: common.rs  day.rs  mod.rs  week.rs
tests/: 2025-09-02.json  daily.json  weekly.json
