[package]
name = "sodexobot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
either = { version = "1.15.0", features = ["serde"] }
poise = "0.6.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.14.0"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"
